<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutChargeItem"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="11dp"
    android:background="@drawable/bill_item"
    android:padding="11dp" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="6dp"
        android:text="@string/default_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/bill_item_title" />

    <TextView
        android:id="@+id/tvAltCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/default_decimal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/bill_item_edit_text_hint" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvTitle"
        android:background="@color/bill_item_divider" />

    <Button
        android:id="@+id/btnDollar"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="11dp"
        android:background="@drawable/btn_toggle_right_normal"
        android:text="@string/symbol_dollar" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnDollar"
        android:layout_toLeftOf="@id/btnDollar"
        android:background="@drawable/btn_toggle_left_selected"
        android:text="@string/symbol_percent" />

    <Button
        android:id="@+id/btnUp"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnDollar"
        android:layout_marginRight="11dp"
        android:layout_toLeftOf="@id/btnPercent"
        android:background="@drawable/btn_toggle_right_normal"
        android:hint="@string/hint_symbol_up" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnDollar"
        android:layout_alignParentLeft="true"
        android:background="@drawable/btn_toggle_left_normal"
        android:hint="@string/hint_symbol_down" />

    <EditText
        android:id="@+id/etCharge"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignBottom="@id/btnPercent"
        android:layout_marginLeft="-3dp"
        android:layout_marginRight="-3dp"
        android:layout_toLeftOf="@id/btnUp"
        android:layout_toRightOf="@id/btnDown"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/default_decimal"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/bill_item_price"
        android:textColorHint="@color/bill_item_edit_text_hint" android:background="@drawable/edit_text" android:layout_alignTop="@id/btnDown" android:layout_marginBottom="-5dp"/>

</RelativeLayout>